# AmazonGui

./: README.md  pyproject.toml
amazongui/: __init__.py  address.py  amazon.py  billing.py  data.py  list.py  main.py  mainwindow.py
amazongui/ui/: about.py  about.ui  address.py  address.ui  billing.py  billing.ui  list.py  list.ui  main.py  main.ui
bat/: debug.bat  install.bat  start.vbs
data/txt/: accounts.txt  proxies.txt
