[tool.poetry]
name = "AmazonGUI"
version = "0.1.0"
description = ""
authors = ["Shayne Hartford <shaybox@shaybox.com>"]

[tool.poetry.dependencies]
PySide6 = "^6.2.2"
python = ">=3.8,<3.11"
requests = "^2.26.0"
selenium = "^4.1.0"
mintotp = "^0.3.0"
undetected-chromedriver = "^3.1.3"

[tool.poetry.dev-dependencies]
black = { version = "^21.12b0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gui = "amazongui.main:gui"
gen = "amazongui.main:gen"

[tool.black]
line-length = 120
